force-app/main/default/objects/Trailhead_Badge__c/Trailhead_Badge__c.object-meta.xml
<CustomObject>
    <description>A record of a badge attempt taken by a contact</description>
    <label>Trailhead Badge Attempt</label>
    <nameField>
        <displayFormat>TBN-{00000000}</displayFormat>
        <label>Trailhead Badge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trailhead Badge Attempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>