force-app/main/default/objects/Trailhead_Badge__c/fields/Badge_ID__c.field-meta.xml
<CustomField>
    <fullName>Badge_ID__c</fullName>
    <label>Badge ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>