force-app/main/default/objects/Trailhead_Badge__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The person who attempted or passed this badge</description>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contacts selected must have "Monitor Trailhead Badges" = TRUE</errorMessage>
        <filterItems>
            <field>Contact.Monitor_Trailhead_Badges__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trailhead Badge Attempts</relationshipLabel>
    <relationshipName>Trailhead_Badge_Attempts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>