force-app/main/default/objects/Trailhead_Badge__c/fields/First_Attempted_At__c.field-meta.xml
<CustomField>
    <fullName>First_Attempted_At__c</fullName>
    <label>First Attempted At</label>
    <type>DateTime</type>
</CustomField>