force-app/main/default/objects/Trailhead_Badge__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>12</length>
    <type>Text</type>
</CustomField>