force-app/main/default/objects/Trailhead_Badge__c/fields/TH_External_ID__c.field-meta.xml
<CustomField>
    <fullName>TH_External_ID__c</fullName>
    <description>A concatenation of the Trailhead User ID and Badge ID used to determine if this is a new or an updated record via External ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Trailhead Contact + "-' + Trailhead badge - an external identifier to allow the system to determine if it should Update or insert a badge record</inlineHelpText>
    <label>TH External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>