force-app/main/default/objects/Trailhead_Badge__c/fields/Time_Taken__c.field-meta.xml
<CustomField>
    <fullName>Time_Taken__c</fullName>
    <formula>( IF( Completed__c, Finished_At__c,  NOW()) - First_Attempted_At__c )*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time taken to complete  badge, calculated as the minutes between the first attempt and finishing the badge.  If the badge has not been finished, then it is the time between now() and when the first attempt was made</inlineHelpText>
    <label>Minutes Taken</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>