force-app/main/default/objects/Trailhead_Badge__c/fields/web_url__c.field-meta.xml
<CustomField>
    <fullName>web_url__c</fullName>
    <label>web_url</label>
    <type>Url</type>
</CustomField>